--- a/docker/master/Dockerfile.debian
+++ b/docker/master/Dockerfile.debian
@@ -1,18 +1,18 @@
 ARG NGINX_VERSION=1.21.0
 FROM soulteary/prebuilt-nginx-modules:base-${NGINX_VERSION} AS Builder
 
-ARG MODULE_CHECKSUM=b5f7d17200477c9bef3611d43eae945d0d70b240
-ARG MODULE_VERSION=0.1.1
+ARG MODULE_CHECKSUM=7e1dc8d8370c39e191eb96c237b80cb66ed9a6c6
+ARG MODULE_VERSION=master
 ARG MODULE_NAME=nginx-ts-module-src
 ARG MODULE_SOURCE=https://github.com/nginx-with-docker/nginx-ts-module-src
 
 RUN apt install unzip -y
 RUN cd /usr/src && \
-    curl -L "${MODULE_SOURCE}/archive/refs/tags/v${MODULE_VERSION}.tar.gz" -o "v${MODULE_VERSION}.tar.gz" && \
-    echo "${MODULE_CHECKSUM}  v${MODULE_VERSION}.tar.gz" | shasum -c && \
-    tar -zxC /usr/src -f v${MODULE_VERSION}.tar.gz && \
+    curl -L "${MODULE_SOURCE}/archive/refs/heads/${MODULE_VERSION}.zip" -o "v${MODULE_VERSION}.zip" && \
+    echo "${MODULE_CHECKSUM}  v${MODULE_VERSION}.zip" | shasum -c && \
+    unzip "v${MODULE_VERSION}.zip" && \
+    mv "$MODULE_NAME-$MODULE_VERSION" "$MODULE_NAME" && \
     cd /usr/src && \
-    mv ${MODULE_NAME}-${MODULE_VERSION}/ ${MODULE_NAME} && \
     cd /usr/src/nginx && \
     echo $CONFARGS && \
     ./configure --with-compat $CONFARGS --add-dynamic-module=../${MODULE_NAME}/ && \
